# shatterpoint

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.yaml  crawler.py  pyproject.toml  requirements.txt  test_smoke.py
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  features.md  schema.md
modules/: __init__.py  fingerprint.py  parser.py  recon.py  spider.py
signatures/: fingerprints.yaml
src/oxj4f_webcrawler/: __init__.py  crawler.py
src/oxj4f_webcrawler/modules/: __init__.py  extractor.py  fingerprint.py  parser.py  recon.py  spider.py
src/oxj4f_webcrawler/utils/: __init__.py  formatter.py  validator.py
src/shatterpoint/: __init__.py  crawler.py
src/shatterpoint/modules/: __init__.py  extractor.py  fingerprint.py  framework_recon.py  parser.py  recon.py  spa.py  spider.py
src/shatterpoint/signatures/: fingerprints.yaml
src/shatterpoint/utils/: __init__.py  auth.py  baseline.py  formatter.py  proxy.py  stacktrace.py  validator.py
tests/: test_smoke.py
utils/: __init__.py  formatter.py
